# realtime-sign-language

./: log.txt  pyproject.toml  requirements.txt
src/: app.py  sign.py
